// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ActionsDropdownOrAction > renders with multiple values 1`] = `
<DocumentFragment>
  <span
    class="__UserAction__"
  >
    <button
      class="ant-btn css-dev-only-do-not-override-mncuj7 ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-dropdown-trigger"
      type="button"
    >
      <span>
        Dude URL
      </span>
    </button>
  </span>
</DocumentFragment>
`;

exports[`ActionsDropdownOrAction > renders with single value 1`] = `
<DocumentFragment>
  <span
    class="__UserAction__"
  >
    <a
      href="dude.com/1"
      target="_blank"
    >
      Dude URL
    </a>
  </span>
</DocumentFragment>
`;
